# data-engineering-toolbox

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: linting.yml
citron-collection-partitioner/: README.md  collection_partitioner.py  file_structure.py  main.py  pyproject.toml  s3.py
extensions/: install.sh  requirements.txt
extensions/raycast/: archive.sh  change_separator.sh  convert_column_to_comma.sh  create_archive_file.sh  csv_to_json.sh  json_to_csv.sh  json_to_csv_comma.sh  mem.sh  open_downloads.sh  open_library.sh  open_private_window_browser.sh  print_memory_use.sh  reformat_json_file.sh  reformat_json_file_arg.sh
extensions/raycast/python_scripts/: csv_to_json.py
raycast/: Makefile  README.md  install.sh
raycast/bash_scripts/: change_separator.sh  create_archive_file.sh  csv_to_json.sh  double_to_single_quotes.sh  json_to_csv.sh  print_memory_use.sh  reformat_json_file.sh  reformat_json_file_arg.sh  single_to_double_quotes.sh
raycast/python_scripts/: csv_to_json.py  double_to_single_quotes.py  json_to_csv.py  replace_separator.py  single_to_double_quotes.py
sql_request_parser/: config.yaml  generate_request.py
sql_request_parser/templates/: insert_alteal_payload.sql  test.sql
