[tool.poetry]
name = "data-engineering-toolbox"
version = "0.1.0"
description = ""
authors = ["eBoreal <jeremie@modeo.ai>"]
readme = "README.md"
packages = [{include = "data_engineering_toolbox"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
